--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@angular/compiler": "~12.1.0-",
     "@angular/core": "~12.1.0-",
     "@angular/forms": "~12.1.0-",
+    "@angular/material": "^12.1.3",
     "@angular/platform-browser": "~12.1.0-",
     "@angular/platform-browser-dynamic": "~12.1.0-",
     "@angular/router": "~12.1.0-",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.0.20",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
